[package]
name = "outdoor"
version = "0.1.0"
authors = ["Radek Dvořák <radek.dvorak@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "^1.0"
async-trait = "^0.1.24"
futures-util = "^0.3.4"
reqwest = { version = "^0.10", default-features = false, features = [ "rustls-tls" ] }
rumq-client = "^0.1.0-alpha.7"
serde = { version = "^1.0", features = ["derive"] }
serde_derive = "^1.0"
serde_json = "^1.0"
structopt = { version = "^0.3.11" }
tokio = { version = "^0.2", features = ["full"] }
uom = "^0.31.1"
url = "^2.1.1"
sloggers = "^0.3.5"
slog = "^2.5.2"

[profile.release]
lto = true
codegen-units = 1
